[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-help"
version = "0.1.0"
description = "Omni-Help: Enterprise-grade Adaptive RAG Router with State-First orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Omni-Help Team" }
]
keywords = ["rag", "langgraph", "router", "customer-support", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    # Config (strict enterprise config)
    "pydantic-settings>=2.0.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Data
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "tavily-python>=0.5.0",
    # Testing / Ops
    "pytest>=8.0.0",
    "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
qdrant = ["qdrant-client>=1.7.0"]
postgres = ["asyncpg>=0.29.0"]

[project.urls]
Repository = "https://github.com/jshahid21/omnihelp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
